--- a/front-server/src/main/resources/static/cart/cart.html
+++ b/front-server/src/main/resources/static/cart/cart.html
@@ -8,15 +8,15 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="oi in happyUserCart.items">
+    <tr ng-repeat="oi in happyUserCart.cartItemDtos">
         <td>{{oi.productTitle}}</td>
-        <td>{{oi.quantity}}</td>
-        <td>{{oi.pricePerProduct + ' x ' + oi.quantity + ' = ' + oi.price}}</td>
+        <td>{{oi.count}}</td>
+        <td>{{oi.price + ' x ' + oi.count + ' = ' + oi.price}}</td>
     </tr>
     <tr>
         <td>Итого</td>
         <td></td>
-        <td>{{happyUserCart.totalPrice}}</td>
+        <td>{{happyUserCart.summ}}</td>
     </tr>
     </tbody>
 </table>
