--- a/front-server/src/main/resources/static/products/products.html
+++ b/front-server/src/main/resources/static/products/products.html
@@ -31,7 +31,7 @@
     <tbody>
     <tr ng-repeat="p in ProductsPage.content">
         <td>{{p.title}}</td>
-        <td>{{p.price}}</td>
+        <td>{{p.cost}}</td>
         <td>
             <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
         </td>
