--- a/front-server/src/main/resources/static/cart/cart.html
+++ b/front-server/src/main/resources/static/cart/cart.html
@@ -1,5 +1,5 @@
 <h3>Корзина</h3>
-<table ng-show="happyUserCart.items.length > 0" class="table table-hover" cellpadding="0" cellspacing="0">
+<table ng-show="happyUserCart.cartItemDtos.length > 0" class="table table-hover" cellpadding="0" cellspacing="0">
     <thead>
     <tr>
         <td>Название</td>
@@ -9,7 +9,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="oi in happyUserCart.cartItemDtos">
-        <td>{{oi.productTitle}}</td>
+<!--        <td>{{oi.productTitle}}</td>-->
         <td>{{oi.count}}</td>
         <td>{{oi.price + ' x ' + oi.count + ' = ' + oi.price}}</td>
     </tr>
@@ -20,6 +20,6 @@
     </tr>
     </tbody>
 </table>
-<span ng-show="happyUserCart.items.length == 0">Ваша корзина пуста</span>
-<button ng-show="happyUserCart.items.length > 0" class="btn btn-primary" ng-click="goToOrderSubmit()">Перейти к оформлению заказа</button>
-<button ng-show="happyUserCart.items.length > 0"  class="btn btn-danger" ng-click="clearCart()">Очистить корзину</button>
+<span ng-show="happyUserCart.cartItemDtos.length == 0">Ваша корзина пуста</span>
+<button ng-show="happyUserCart.cartItemDtos.length > 0" class="btn btn-primary" ng-click="goToOrderSubmit()">Перейти к оформлению заказа</button>
+<button ng-show="happyUserCart.cartItemDtos.length > 0"  class="btn btn-danger" ng-click="clearCart()">Очистить корзину</button>
