--- a/front-server/src/main/resources/static/cart/cart.html
+++ b/front-server/src/main/resources/static/cart/cart.html
@@ -9,7 +9,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="oi in happyUserCart.cartItems">
-        <td>{{oi.productId}}</td>
+        <td>{{oi.productTitle}}</td>
         <td>{{oi.count}}</td>
         <td>{{oi.cost + ' x ' + oi.count + ' = ' + oi.sum}}</td>
     </tr>
