--- a/front-server/src/main/resources/static/order_confirmation/order_confirmation.html
+++ b/front-server/src/main/resources/static/order_confirmation/order_confirmation.html
@@ -1,6 +1,6 @@
 <div>
     <h3>Ваш заказ</h3>
-    <table ng-show="happyUserCart.items.length > 0" class="table table-hover" cellpadding="0" cellspacing="0">
+    <table ng-show="happyUserCart.cartItems.length > 0" class="table table-hover" cellpadding="0" cellspacing="0">
         <thead>
         <tr>
             <td>Название</td>
@@ -9,15 +9,15 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="oi in happyUserCart.items">
+        <tr ng-repeat="oi in happyUserCart.cartItems">
             <td>{{oi.productTitle}}</td>
-            <td>{{oi.quantity}}</td>
-            <td>{{oi.quantity + ' x ' + oi.pricePerProduct + ' = ' + oi.price}}</td>
+            <td>{{oi.count}}</td>
+            <td>{{oi.cost + ' x ' + oi.count + ' = ' + oi.sum}}</td>
         </tr>
         <tr>
             <td>Итого</td>
             <td></td>
-            <td>{{happyUserCart.totalPrice}}</td>
+            <td>{{happyUserCart.summ}}</td>
         </tr>
         </tbody>
     </table>
