--- a/front-server/src/main/resources/static/orders/orders.html
+++ b/front-server/src/main/resources/static/orders/orders.html
@@ -13,7 +13,7 @@
         <td>#{{o.id}}</td>
         <td>{{o.summ}}</td>
         <td>{{o.address}}</td>
-        <td>{{o.createdAt}}</td>
+        <td>{{o.createdAt.substring(0,19).replace("T", " ")}}</td>
     </tr>
     </tbody>
 </table>
